# model-explorer-onnx

./: .gitignore  .lintrunner.toml  LICENSE  README.md  netron.json  pyproject.toml
.github/workflows/: codeql.yaml  main.yaml  pages.yaml
docs/: onnx-prompt-qa-design.md
src/model_explorer_onnx/: _passes.py  main.py  torch_utils.py
src/model_explorer_onnx/_passes/: __init__.py  assign_subgraph_names_pass.py
src/model_explorer_onnx/_utils/: __init__.py
src/model_explorer_onnx/passes/: assign_subgraph_names_pass.py
testdata/: cond_model.textproto  constant_node_tests.textproto  control_flow_model.textproto  initializer_node_tests.textproto  loop.py  loop_with_multiple_refs.textproto  loop_with_outer_ref.textproto  phi-4-mm-speech.textproto  subgraph_with_shared_initializer.py  subgraph_with_shared_initializer.textproto
tests/: test_main_utils.py  test_optional_inputs.py  test_passes.py
themes/: netron.json
tools/test_generation/: constant_nodes.py  initializers.py
tools/themes/: construct_theme.py
tools/web/: sync_web_converter.py
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/scripts/: copy-visualizer-assets.mjs
web/src/: main.ts  pyodide-worker.ts  style.css
web/src/python/: convert.py
