[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "model-explorer-onnx"
version = "0.3.9"
description = "Adapter for ai-edge-model-explorer to support ONNX models"
authors = [{ name = "Justin Chu", email = "justinchu@microsoft.com" }]
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ["onnx", "model-explorer", "visualization"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: POSIX",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
]

dependencies = [
  "ai-edge-model-explorer>=0.1.10",
  "numpy",
  "onnx",
  "onnx_ir>=0.1.7",
]

[project.scripts]
onnxvis = "model_explorer_onnx.bin.onnxvis:main"

[project.urls]
Repository = "https://github.com/justinchuby/model-explorer-onnx"
